@@ -16,7 +16,9 @@ NEW FEATURES:
    'SLURM_JOB_NODELIST', e.g. "dev1,n[3-4,095-120]". It will use
    'scontrol show hostname "$SLURM_JOB_NODELIST"' to expand it, if supported
    on the current machine, otherwise it will attempt to parse and expand the
-   nodelist specification using R.
+   nodelist specification using R.  If either of enviroment variable
+   'SLURM_JOB_CPUS_PER_NODE' or 'SLURM_TASKS_PER_NODE' is set, then each
+   node in the nodelist will be represented that number of times.
    
  * makeClusterPSOCK(), or actually makeNodePSOCK(), gained argument 'quiet',
    which can be used to silence output produced by 'manual = TRUE'.
